# ecte477-starter-cpp

./: .clang-format  CMakeLists.txt  README.md  package.xml
include/usar/: colours.hpp  commands.hpp
launch/: beacons.launch  command_server.launch  depth.launch  navigator.launch  wall_follower.launch
src/: beacon_node.cpp  command_server_node.cpp  depth_node.cpp  navigator_node.cpp  wall_follower_node.cpp
